--- a/src/app/components/categories/categories.component.html
+++ b/src/app/components/categories/categories.component.html
@@ -12,14 +12,26 @@
                 </div>
             </header>
             <div style="margin-top: 30px; margin-right: 2">
-                <alert type="danger" dismissible="true">
-                    <strong>Erreur!</strong> Une erreur s'est produite lors d'ajout de catégorie.
+                <alert type="danger" dismissible="true" *ngIf="addError">
+                    <strong>Erreur!</strong> Une erreur s'est catégorie lors d'ajout de catégorie.
                 </alert>
-                <alert type="success" dismissible="true">
-                    <strong>Succées !</strong> L'action est effectué avec succés.
+                <alert type="success" dismissible="true" *ngIf="categorieAdded">
+                    <strong>Succées !</strong> L'ajout est effectué avec succés.
+                </alert>
+                <alert type="danger" dismissible="true" *ngIf="updateError">
+                    <strong>Erreur!</strong> Une erreur s'est produite lors de mise à jour du catégorie.
+                </alert>
+                <alert type="success" dismissible="true" *ngIf="categorieUpdated">
+                    <strong>Succées !</strong> La mise à jour est effectué avec succés.
+                </alert>
+                <alert type="danger" dismissible="true" *ngIf="deleteError">
+                    <strong>Erreur!</strong> Une erreur s'est produite lors de la suppression de catégorie.
+                </alert>
+                <alert type="success" dismissible="true" *ngIf="categorieDeleted">
+                    <strong>Succées !</strong> La suppression est effectué avec succés.
                 </alert>
             </div>
-            <table class="table table-striped table-advance table-hover" >
+            <table class="table table-striped table-advance table-hover" *ngIf="!(noData && dataLoaded)">
                 <tbody>
                     <tr>
                         <th>
@@ -39,22 +51,26 @@
                         </th>
                         <th style="min-width: 5%;">Action</th>
                     </tr>
-                    <tr>
-                        <td>Angeline</td>
-                        <td>hafeh</td>
-                        <td>Beez</td>
+                    <tr *ngFor="let categorie of categories; let i = index;">
+                        <td>{{categorie.nom_cat}}</td>
+                        <td>{{categorie.date_ajout}}</td>
+                        <td>{{categorie.date_modification}}</td>
                         <td>
                             <div class="btn-group pull-right">
-                                    
-                                <button tooltip="Modifier" (click)="openModal(updatetemplate)"
+
+                                <button tooltip="Modifier" (click)="openUpdateModal(updatetemplate, categorie)"
                                     class="btn btn-success"><i class="icon_pencil-edit_alt"></i></button>
-                                <button class="btn btn-danger" tooltip="Supprimer" (click)="openModal(confirmDelete)"><i
+                                <button class="btn btn-danger" tooltip="Supprimer"
+                                    (click)="openDeleteModal(confirmDelete, categorie, i)"><i
                                         class="icon_close_alt2"></i></button>
                             </div>
                         </td>
                     </tr>
                 </tbody>
             </table>
+            <alert type="info" *ngIf="noData && dataLoaded">
+                <strong>Il n'y a aucun catégorie à afficher!</strong>
+            </alert>
         </section>
     </div>
 </div>
@@ -69,15 +85,21 @@
         </div>
         <div class="modal-body">
             <div class="form-group">
-                    <div class="col-sm-4 pull-left">
-                <label class="control-label">Nom du catégorie</label></div>
+                <div class="col-sm-4 pull-left">
+                    <label class="control-label">Nom du catégorie*</label></div>
                 <div class="col-sm-8">
-                    <input type="text" class="form-control">
+                    <input type="text" class="form-control" [(ngModel)]="newCategorie.nom_cat"
+                    [ngModelOptions]="{standalone: true}" name="nom" id="nom" required #nom="ngModel">
+                    <div *ngIf="nom.errors && (nom.dirty || nom.touched)" class="alert alert-danger">
+                        <div [hidden]="!nom.errors.required">
+                            Champ obligatoire!
+                        </div>
+                    </div>
                 </div>
             </div>
-          </div>
+        </div>
         <div class="modal-footer">
-            <button type="submit" class="btn btn-success pull-left">Ajouter</button>
+            <button type="submit" class="btn btn-success pull-left" (click)="addCategorie()" [disabled]="nom.errors">Ajouter</button>
             <button type="button" class="btn btn-danger" (click)="modalRef.hide()">Annuler</button>
 
         </div>
@@ -85,24 +107,30 @@
 </ng-template>
 
 <ng-template #updatetemplate>
-    <form class="form-horizontal " method="get">
+    <form class="form-horizontal">
         <div class="modal-header">
-            <h3 class="modal-title pull-left">Mise à jour de catégorie cat1</h3>
+            <h3 class="modal-title pull-left">Mise à jour de catégorie {{categorieToUpdate.nom_cat}}</h3>
             <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
                 <span aria-hidden="true">&times;</span>
             </button>
         </div>
         <div class="modal-body">
             <div class="form-group">
-                    <div class="col-sm-4 pull-left">
-                <label class="control-label">Nom du catégorie</label></div>
+                <div class="col-sm-4 pull-left">
+                    <label class="control-label">Nom du catégorie*</label></div>
                 <div class="col-sm-8">
-                    <input type="text" class="form-control">
+                    <input type="text" class="form-control" [(ngModel)]="categorieToUpdate.nom_cat"
+                    [ngModelOptions]="{standalone: true}" name="nom" id="nom" required #nom="ngModel">
+                    <div *ngIf="nom.errors && (nom.dirty || nom.touched)" class="alert alert-danger">
+                        <div [hidden]="!nom.errors.required">
+                            Champ obligatoire!
+                        </div>
+                    </div>
                 </div>
             </div>
-          </div>
+        </div>
         <div class="modal-footer">
-            <button type="submit" class="btn btn-success pull-left">Modifier</button>
+            <button type="submit" class="btn btn-success pull-left" (click)="updateCategorie()" [disabled]="nom.errors">Modifier</button>
             <button type="button" class="btn btn-danger" (click)="modalRef.hide()">Annuler</button>
 
         </div>
