--- a/src/app/components/conges/conges.component.html
+++ b/src/app/components/conges/conges.component.html
@@ -12,14 +12,26 @@
                     </div>
                 </header>
                 <div style="margin-top: 30px; margin-right: 2">
-                    <alert type="danger" dismissible="true">
-                        <strong>Erreur!</strong> Une erreur s'est produite lors d'ajout du congés.
+                    <alert type="danger" dismissible="true" *ngIf="addError">
+                        <strong>Erreur!</strong> Une erreur s'est catégorie lors d'ajout de congé.
                     </alert>
-                    <alert type="success" dismissible="true">
-                        <strong>Succées !</strong> L'action est effectué avec succés.
+                    <alert type="success" dismissible="true" *ngIf="congeAdded">
+                        <strong>Succées !</strong> L'ajout est effectué avec succés.
+                    </alert>
+                    <alert type="danger" dismissible="true" *ngIf="updateError">
+                        <strong>Erreur!</strong> Une erreur s'est produite lors de mise à jour du congé.
+                    </alert>
+                    <alert type="success" dismissible="true" *ngIf="congeUpdated">
+                        <strong>Succées !</strong> La mise à jour est effectué avec succés.
+                    </alert>
+                    <alert type="danger" dismissible="true" *ngIf="deleteError">
+                        <strong>Erreur!</strong> Une erreur s'est produite lors de la suppression de congé.
+                    </alert>
+                    <alert type="success" dismissible="true" *ngIf="congeDeleted">
+                        <strong>Succées !</strong> La suppression est effectué avec succés.
                     </alert>
                 </div>
-                <table class="table table-striped table-advance table-hover">
+                <table class="table table-striped table-advance table-hover" *ngIf="!(noData && dataLoaded)">
                     <tbody>
                         <tr>
                             <th>
@@ -32,11 +44,11 @@
                                 <ng-container *ngIf="filter"><input type="text" class="form-control" placeholder="Date de fin">
                                 </ng-container>
                             </th>
-                            <th>
+                            <!-- <th>
                                 <ng-container *ngIf="!filter">Nombre de jours</ng-container>
                                 <ng-container *ngIf="filter"><input type="number" class="form-control" placeholder="Nombre de jours">
                                 </ng-container>
-                            </th>
+                            </th> -->
                             <th>
                                     <ng-container *ngIf="!filter">Cause</ng-container>
                                     <ng-container *ngIf="filter"><input type="text" class="form-control" placeholder="Cause">
@@ -59,79 +71,42 @@
                                 </th>
                             <th style="min-width: 5%;">Action</th>
                         </tr>
-                        <tr>
-                            <td>Angeline</td>
-                            <td>hafeh</td>
-                            <td>Beez</td>
-                            <td>Maladie</td>
-                            <td>gdgdgdg</td>
-                            <td>2004-07-06</td>
-                            <td><p class="badge bg-success">Validé</p></td>
+                        <tr *ngFor="let conge of conges; let i = index">
+                            <td>{{conge.date_debut}}</td>
+                            <td>{{conge.date_fin}}</td>
+                            <!-- <td>{{conge.}}</td> -->
+                            <td>{{conge.cause}}</td>
+                            <td>{{conge.date_ajout}}</td>
+                            <td>{{conge.date_modification}}</td>
+                            <td><p class="badge" [ngClass]="{'bg-success':conge.etat_conges == 'Valide',
+                            'bg-danger': conge.etat_conges == 'Refuse',
+                            ' bg-warning': conge.etat_conges == 'En_Attente'}">{{conge.etat_conges}}</p></td>
                             <td>
                                 <div class="btn-group">
-                                    <button tooltip="Modifier" (click)="openModal(updatetemplate)"
-                                        class="btn btn-success"><i class="icon_pencil-edit_alt"></i></button>
-                                    <button class="btn btn-danger" tooltip="Supprimer" (click)="openModal(confirmDelete)"><i
-                                            class="icon_close_alt2"></i></button>
-                                            <button tooltip="Valider"
-                                        class="btn btn-success"><i class="icon_check"></i></button>
-                                    <button class="btn btn-danger" tooltip="Refuser" ><i
+                                    <button tooltip="Modifier" (click)="openUpdateModal(updatetemplate, conge)"
+                                        class="btn btn-success" *ngIf="conge.etat_conges == 'En_Attente'"><i class="icon_pencil-edit_alt"></i></button>
+                                    <button class="btn btn-danger" tooltip="Supprimer" *ngIf="conge.etat_conges == 'En_Attente'" (click)="openDeleteModal(confirmDelete, conge, i)"><i
+                                            class="icon_close_alt2" ></i></button>
+                                            <button tooltip="Valider" (click)="valider(conge)"
+                                        class="btn btn-success" *ngIf="conge.etat_conges == 'En_Attente'"><i class="icon_check"></i></button>
+                                    <button class="btn btn-danger" (click)="refuser(conge)" tooltip="Refuser" *ngIf="conge.etat_conges == 'En_Attente'"><i
                                             class="icon_close"></i></button>
                                 </div>
                             </td>
                         </tr>
-                        <tr>
-                                <td>Angeline</td>
-                                <td>hafeh</td>
-                                <td>Beez</td>
-                                <td>Maladie</td>
-                                <td>gdgdgdg</td>
-                                <td>2004-07-06</td>
-                                <td><p class="badge bg-danger">Refusé</p></td>
-                                <td>
-                                    <div class="btn-group">
-                                        <button tooltip="Modifier" (click)="openModal(updatetemplate)"
-                                            class="btn btn-success"><i class="icon_pencil-edit_alt"></i></button>
-                                        <button class="btn btn-danger" tooltip="Supprimer" (click)="openModal(confirmDelete)"><i
-                                                class="icon_close_alt2"></i></button>
-                                                <button tooltip="Valider"
-                                            class="btn btn-success"><i class="icon_check"></i></button>
-                                        <button class="btn btn-danger" tooltip="Refuser" ><i
-                                                class="icon_close"></i></button>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                    <td>Angeline</td>
-                                    <td>hafeh</td>
-                                    <td>Beez</td>
-                                    <td>Maladie</td>
-                                    <td>gdgdgdg</td>
-                                    <td>2004-07-06</td>
-                                    <td><p class="badge bg-warning">En attente</p></td>
-                                    <td>
-                                        <div class="btn-group">
-                                            <button tooltip="Modifier" (click)="openModal(updatetemplate)"
-                                                class="btn btn-success"><i class="icon_pencil-edit_alt"></i></button>
-                                            <button class="btn btn-danger" tooltip="Supprimer" (click)="openModal(confirmDelete)"><i
-                                                    class="icon_close_alt2"></i></button>
-                                                    <button tooltip="Valider"
-                                                class="btn btn-success"><i class="icon_check"></i></button>
-                                            <button class="btn btn-danger" tooltip="Refuser" ><i
-                                                    class="icon_close"></i></button>
-                                        </div>
-                                    </td>
-                                </tr>
                     </tbody>
                 </table>
             </section>
+            <alert type="info" *ngIf="noData && dataLoaded">
+                <strong>Il n'y a aucun congé à afficher!</strong>
+            </alert>
         </div>
     </div>
     
     <ng-template #template>
         <form class="form-horizontal " method="get">
             <div class="modal-header">
-                <h3 class="modal-title pull-left">Ajout d'un Congés</h3>
+                <h3 class="modal-title pull-left">Ajout d'un Congé</h3>
                 <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -139,9 +114,15 @@
             <div class="modal-body">
                 <div class="form-group">
                         <div class="col-sm-4 pull-left">
-                    <label class="control-label">Date de début</label></div>
+                    <label class="control-label" >Date de début</label></div>
                     <div class="col-sm-8">
-                        <input type="date" class="form-control">
+                        <input type="date" class="form-control" [(ngModel)]="newConge.date_debut"
+                        [ngModelOptions]="{standalone: true}" name="debut" id="debut" required #debut="ngModel">
+                                <div *ngIf="debut.errors && (debut.dirty || debut.touched)" class="alert alert-danger">
+                                    <div [hidden]="!debut.errors.required">
+                                        Champ obligatoire!
+                                    </div>
+                                </div>
                     </div>
                 </div>
                 <div class="form-group">
@@ -149,7 +130,13 @@
                     <label class="control-label">Date de fin</label>
                         </div>
                     <div class="col-sm-8">
-                        <input type="date" class="form-control">
+                        <input type="date" class="form-control" [(ngModel)]="newConge.date_fin"
+                        [ngModelOptions]="{standalone: true}" name="fin" id="fin" required #fin="ngModel">
+                    <div *ngIf="fin.errors && (fin.dirty || fin.touched)" class="alert alert-danger">
+                        <div [hidden]="!fin.errors.required">
+                            Champ obligatoire!
+                        </div>
+                    </div>
                     </div>
                 </div>
                 <div class="form-group">
@@ -157,15 +144,21 @@
                     <label class="control-label">Cause</label>
                         </div>
                     <div class="col-sm-8">
-                        <textarea class="form-control">
+                        <textarea class="form-control" [(ngModel)]="newConge.cause"
+                        [ngModelOptions]="{standalone: true}" name="cause" id="cause" required #cause="ngModel">
                         </textarea>
+                        <div *ngIf="cause.errors && (cause.dirty || cause.touched)" class="alert alert-danger">
+                                <div [hidden]="!cause.errors.required">
+                                    Champ obligatoire!
+                                </div>
+                            </div>
                         
                     </div>
                 </div>
                 
             </div>
             <div class="modal-footer">
-                <button type="submit" class="btn btn-success pull-left">Ajouter</button>
+                <button type="submit" class="btn btn-success pull-left" (click)="addConge()" [disabled]="debut.errors||fin.errors||cause.errors">Ajouter</button>
                 <button type="button" class="btn btn-danger" (click)="modalRef.hide()">Annuler</button>
     
             </div>
@@ -185,7 +178,13 @@
                                 <div class="col-sm-4 pull-left">
                             <label class="control-label">Date de début</label></div>
                             <div class="col-sm-8">
-                                <input type="date" class="form-control">
+                                <input type="date" class="form-control" [(ngModel)]="congeToUpdate.date_debut"
+                                [ngModelOptions]="{standalone: true}" name="debut" id="debut" required #debut="ngModel">
+                                <div *ngIf="debut.errors && (debut.dirty || debut.touched)" class="alert alert-danger">
+                                    <div [hidden]="!debut.errors.required">
+                                        Champ obligatoire!
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="form-group">
@@ -193,7 +192,13 @@
                             <label class="control-label">Date de fin</label>
                                 </div>
                             <div class="col-sm-8">
-                                <input type="date" class="form-control">
+                                <input type="date" class="form-control" [(ngModel)]="congeToUpdate.date_fin"
+                                [ngModelOptions]="{standalone: true}" name="fin" id="fin" required #fin="ngModel">
+                    <div *ngIf="fin.errors && (fin.dirty || fin.touched)" class="alert alert-danger">
+                        <div [hidden]="!fin.errors.required">
+                            Champ obligatoire!
+                        </div>
+                    </div>
                             </div>
                         </div>
                         <div class="form-group">
@@ -201,17 +206,24 @@
                             <label class="control-label">Cause</label>
                                 </div>
                             <div class="col-sm-8">
-                                <textarea class="form-control">
+                                <textarea class="form-control" [(ngModel)]="congeToUpdate.cause"
+                                [ngModelOptions]="{standalone: true}" name="cause" id="cause" required #cause="ngModel">
+                    
                                 </textarea>
+                                <div *ngIf="cause.errors && (cause.dirty || cause.touched)" class="alert alert-danger">
+                                        <div [hidden]="!cause.errors.required">
+                                            Champ obligatoire!
+                                        </div>
+                                    </div>
                                 
                             </div>
                         </div>
                         
                     </div>
                     <div class="modal-footer">
-                        <button type="submit" class="btn btn-success pull-left">Modifier</button>
+                        <button type="submit" class="btn btn-success pull-left" (click)="updateConge()"
+                        [disabled]="debut.errors||fin.errors||cause.errors">Modifier</button>
                         <button type="button" class="btn btn-danger" (click)="modalRef.hide()">Annuler</button>
-            
                     </div>
                 </form>
     </ng-template>
