--- a/src/app/components/fournisseurs/fournisseurs.component.html
+++ b/src/app/components/fournisseurs/fournisseurs.component.html
@@ -12,14 +12,26 @@
                 </div>
             </header>
             <div style="margin-top: 30px; margin-right: 2">
-                <alert type="danger" dismissible="true">
+                <alert type="danger" dismissible="true" *ngIf="addError">
                     <strong>Erreur!</strong> Une erreur s'est produite lors d'ajout de fournisseur.
                 </alert>
-                <alert type="success" dismissible="true">
-                    <strong>Succées !</strong> L'action est effectué avec succés.
+                <alert type="success" dismissible="true" *ngIf="fourAdded">
+                    <strong>Succées !</strong> L'ajout est effectué avec succés.
+                </alert>
+                <alert type="danger" dismissible="true" *ngIf="updateError">
+                    <strong>Erreur!</strong> Une erreur s'est produite lors de mise à jour du fournisseur.
+                </alert>
+                <alert type="success" dismissible="true" *ngIf="fourUpdated">
+                    <strong>Succées !</strong> La mise à jour est effectué avec succés.
+                </alert>
+                <alert type="danger" dismissible="true" *ngIf="deleteError">
+                    <strong>Erreur!</strong> Une erreur s'est produite lors de la suppression de fournisseur.
+                </alert>
+                <alert type="success" dismissible="true" *ngIf="fourDeleted">
+                    <strong>Succées !</strong> La suppression est effectué avec succés.
                 </alert>
             </div>
-            <table class="table table-striped table-advance table-hover">
+            <table class="table table-striped table-advance table-hover" *ngIf="!(noData && dataLoaded)">
                 <tbody>
                     <tr>
                         <th>
@@ -54,24 +66,28 @@
                         </th>
                         <th style="min-width: 5%;">Action</th>
                     </tr>
-                    <tr>
-                        <td>Angeline</td>
-                        <td>hafeh</td>
-                        <td>Beez</td>
-                        <td>gdgdgdg</td>
-                        <td>2004-07-06</td>
-                        <td>dale@chief.info</td>
+                    <tr *ngFor="let fournisseur of fournisseurs; let i = index;">
+                        <td>{{fournisseur.nom_four}}</td>
+                        <td>{{fournisseur.email_four}}</td>
+                        <td>{{fournisseur.adresse_four}}</td>
+                        <td>{{fournisseur.tel_four}}</td>
+                        <td>{{fournisseur.date_ajout}}</td>
+                        <td>{{fournisseur.date_modification}}</td>
                         <td>
                             <div class="btn-group">
-                                <button tooltip="Modifier" (click)="openModal(updatetemplate)"
+                                <button tooltip="Modifier" (click)="openUpdateModal(updatetemplate, fournisseur)"
                                     class="btn btn-success"><i class="icon_pencil-edit_alt"></i></button>
-                                <button class="btn btn-danger" tooltip="Supprimer" (click)="openModal(confirmDelete)"><i
+                                <button class="btn btn-danger" tooltip="Supprimer"
+                                    (click)="openDeleteModal(confirmDelete, fournisseur, i)"><i
                                         class="icon_close_alt2"></i></button>
                             </div>
                         </td>
                     </tr>
                 </tbody>
             </table>
+            <alert type="info" *ngIf="noData && dataLoaded">
+                <strong>Il n'y a aucun fournisseur à afficher!</strong>
+            </alert>
         </section>
     </div>
 </div>
@@ -86,40 +102,73 @@
         </div>
         <div class="modal-body">
             <div class="form-group">
-                    <div class="col-sm-4 pull-left">
-                <label class="control-label">Nom</label></div>
+                <div class="col-sm-4 pull-left">
+                    <label class="control-label">Nom</label></div>
                 <div class="col-sm-8">
-                    <input type="text" class="form-control">
+                    <input type="text" class="form-control" [(ngModel)]="newFour.nom_four"
+                        [ngModelOptions]="{standalone: true}" name="nom" id="ref" required #nom="ngModel">
+                    <div *ngIf="nom.errors && (nom.dirty || nom.touched)" class="alert alert-danger">
+                        <div [hidden]="!nom.errors.required">
+                            Champ obligatoire!
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="form-group">
-                    <div class="col-sm-4 pull-left">
-                <label class="control-label">Email</label>
-                    </div>
+                <div class="col-sm-4 pull-left">
+                    <label class="control-label">Email</label>
+                </div>
                 <div class="col-sm-8">
-                    <input type="text" class="form-control">
+                    <input type="text" class="form-control" [(ngModel)]="newFour.email_four"
+                        [ngModelOptions]="{standalone: true}" name="email" id="email" required #email="ngModel"
+                        pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$">
+                    <div *ngIf="email.errors && (email.dirty || email.touched)" class="alert alert-danger">
+                        <div [hidden]="!email.errors.required">
+                            Champ obligatoire!
+                        </div>
+                        <div [hidden]="!email.errors.pattern">
+                            Email invalide!!
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="form-group">
-                    <div class="col-sm-4 pull-left">
-                <label class="control-label">Adresse</label>
-                    </div>
+                <div class="col-sm-4 pull-left">
+                    <label class="control-label">Adresse</label>
+                </div>
                 <div class="col-sm-8">
-                    <input type="text" class="form-control">
+                    <input type="text" class="form-control" [(ngModel)]="newFour.adresse_four"
+                        [ngModelOptions]="{standalone: true}" name="adresse" id="adresse" required #adresse="ngModel">
+                    <div *ngIf="adresse.errors && (adresse.dirty || adresse.touched)" class="alert alert-danger">
+                        <div [hidden]="!adresse.errors.required">
+                            Champ obligatoire!
+                        </div>
+                    </div>
                 </div>
             </div>
-            
+
             <div class="form-group">
-                    <div class="col-sm-4 pull-left">
-                <label class="control-label">Numéro de telephone</label>
-                    </div>
+                <div class="col-sm-4 pull-left">
+                    <label class="control-label">Numéro de telephone</label>
+                </div>
                 <div class="col-sm-8">
-                    <input type="tel" class="form-control">
+                    <input type="tel" class="form-control" [(ngModel)]="newFour.tel_four"
+                        [ngModelOptions]="{standalone: true}" minlength="8" maxlength="8" id="tel" name="tel" required
+                        #tel="ngModel">
+                    <div *ngIf="tel.errors && (tel.dirty || tel.touched)" class="alert alert-danger">
+                        <div [hidden]="!tel.errors.required">
+                            Champ obligatoire!
+                        </div>
+                        <div [hidden]="!tel.errors.minlength">
+                            Numéro de telephone doit comporter 8 chiffre!!
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="modal-footer">
-            <button type="submit" class="btn btn-success pull-left">Ajouter</button>
+            <button type="submit" class="btn btn-success pull-left" (click)="addFournisseur()"
+                [disabled]="nom.errors||tel.errors||email.errors||adresse.errors">Ajouter</button>
             <button type="button" class="btn btn-danger" (click)="modalRef.hide()">Annuler</button>
 
         </div>
@@ -129,47 +178,80 @@
 <ng-template #updatetemplate>
     <form class="form-horizontal " method="get">
         <div class="modal-header">
-            <h3 class="modal-title pull-left">Modification du fournisseur foulen fouleni</h3>
+            <h3 class="modal-title pull-left">Modification du fournisseur {{fourToUpdate.nom_four}}</h3>
             <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
                 <span aria-hidden="true">&times;</span>
             </button>
         </div>
         <div class="modal-body">
-                <div class="form-group">
-                        <div class="col-sm-4 pull-left">
+            <div class="form-group">
+                <div class="col-sm-4 pull-left">
                     <label class="control-label">Nom</label></div>
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control">
-                    </div>
-                </div>
-                <div class="form-group">
-                        <div class="col-sm-4 pull-left">
-                    <label class="control-label">Email</label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" [(ngModel)]="fourToUpdate.nom_four"
+                        [ngModelOptions]="{standalone: true}" name="nom" id="ref" required #nom="ngModel">
+                    <div *ngIf="nom.errors && (nom.dirty || nom.touched)" class="alert alert-danger">
+                        <div [hidden]="!nom.errors.required">
+                            Champ obligatoire!
                         </div>
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control">
-                    </div>
-                </div>
-                <div class="form-group">
-                        <div class="col-sm-4 pull-left">
-                    <label class="control-label">Adresse</label>
-                        </div>
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control">
-                    </div>
-                </div>
-                
-                <div class="form-group">
-                        <div class="col-sm-4 pull-left">
-                    <label class="control-label">Numéro de telephone</label>
-                        </div>
-                    <div class="col-sm-8">
-                        <input type="tel" class="form-control">
                     </div>
                 </div>
             </div>
+            <div class="form-group">
+                <div class="col-sm-4 pull-left">
+                    <label class="control-label">Email</label>
+                </div>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" [(ngModel)]="fourToUpdate.email_four"
+                        [ngModelOptions]="{standalone: true}" name="email" id="email" required #email="ngModel"
+                        pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$">
+                    <div *ngIf="email.errors && (email.dirty || email.touched)" class="alert alert-danger">
+                        <div [hidden]="!email.errors.required">
+                            Champ obligatoire!
+                        </div>
+                        <div [hidden]="!email.errors.pattern">
+                            Email invalide!!
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-4 pull-left">
+                    <label class="control-label">Adresse</label>
+                </div>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" [(ngModel)]="fourToUpdate.adresse_four"
+                        [ngModelOptions]="{standalone: true}" name="adresse" id="adresse" required #adresse="ngModel">
+                    <div *ngIf="adresse.errors && (adresse.dirty || adresse.touched)" class="alert alert-danger">
+                        <div [hidden]="!adresse.errors.required">
+                            Champ obligatoire!
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-sm-4 pull-left">
+                    <label class="control-label">Numéro de telephone</label>
+                </div>
+                <div class="col-sm-8">
+                    <input type="tel" class="form-control" [(ngModel)]="fourToUpdate.tel_four"
+                        [ngModelOptions]="{standalone: true}" minlength="8" maxlength="8" id="tel" name="tel" required
+                        #tel="ngModel">
+                    <div *ngIf="tel.errors && (tel.dirty || tel.touched)" class="alert alert-danger">
+                        <div [hidden]="!tel.errors.required">
+                            Champ obligatoire!
+                        </div>
+                        <div [hidden]="!tel.errors.minlength">
+                            Numéro de telephone doit comporter 8 chiffre!!
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="modal-footer">
-            <button type="submit" class="btn btn-success pull-left">Modifier</button>
+            <button type="submit" class="btn btn-success pull-left" (click)="updateFournisseur()"
+                [disabled]="nom.errors||tel.errors||email.errors||adresse.errors">Modifier</button>
             <button type="button" class="btn btn-danger" (click)="modalRef.hide()">Annuler</button>
 
         </div>
