--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,21 +1,22 @@
 <div class="login-img3-body" id="body">
 
     <div class="container">
-
       <form class="login-form" >        
         <div class="login-wrap" style="padding-bottom: 43px;">
             <p class="login-img"><i class="icon_lock_alt"></i></p>
+            <p style="color: red;" *ngIf="connectionError">Vérifiez vos données!!</p>
             <div class="input-group">
               <span class="input-group-addon"><i class="icon_profile"></i></span>
-              <input type="text" class="form-control" placeholder="Username" autofocus>
+              <input type="text" class="form-control" placeholder="Login" autofocus [(ngModel)]="login"
+              [ngModelOptions]="{standalone: true}">
             </div>
             <div class="input-group" style="margin-top:15px;">
                 <span class="input-group-addon"><i class="icon_key_alt"></i></span>
-                <input type="password" class="form-control" placeholder="Password">
+                <input type="password" class="form-control" placeholder="Mot de passe" [(ngModel)]="pwd"
+                [ngModelOptions]="{standalone: true}">
             </div>
-            
-            <button class="btn btn-info btn-lg btn-block" type="submit" style="margin-top:15px;" (click)="login()">Login</button>
-            <span class="pull-right" style="margin-top:5px;"> <a href="#"> Forgot Password?</a></span>
+            <button class="btn btn-info btn-lg btn-block" style="margin-top:15px;" (click)="authentication()">Login</button>
+            <span class="pull-right" style="margin-top:5px;"> <a [routerLink]="['/forgetpass']"> Forgot Password?</a></span>
         </div>
       </form>
   
