--- a/src/app/components/caisse/caisse.component.html
+++ b/src/app/components/caisse/caisse.component.html
@@ -1,3 +1,38 @@
-<p>
-  caisse works!
-</p>
+<div class="row">
+  <div class="col-lg-12">
+    <section class="panel">
+      <header class="panel-heading">
+
+
+        <div style="margin-bottom: 10px;">
+          <input [(ngModel)]="selected_prod" [typeahead]="produits"  (typeaheadOnSelect)="onSelectItem($event)"
+          [typeaheadMinLength]="0" typeaheadOptionField="nom_prod" class="form-control" style="width:50%" required><br>
+          <input class="form-control" type = "number" placeholder="Nombre de piéce" [(ngModel)]="nb_piece" style="width:50%" required><br>
+          <button class="btn btn-info" (click)="addProdNewElement()" [disabled]="!selected_prod || nb_piece<1" style="margin-right: 10px;">+</button>
+          <button (click)="generate()" class="btn btn-success" style="margin-right: 10px;">Imprimer Facture</button> 
+          <button (click)="closePdfWindow()" *ngIf="closeButton" class="btn btn-danger">Fermer la fenétre Facture</button>
+          <br>
+          Somme Total: <b>{{total}} DT</b><br>
+        </div>
+      </header>
+      
+      <table class="table table-striped table-advance table-hover">
+        <tbody>
+          <tr>
+            <th>Produits</th>
+            <th>Prix Unitaire</th>
+            <th>TVA</th>
+            <th>Nombre de piéce</th>
+          </tr>
+          <tr *ngFor="let achat of achats">
+            <td>{{achat.produit}}</td>
+            <td>{{achat.prix}}</td>
+            <td>{{achat.tva}}</td>
+            <td>{{achat.nb_piece}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+  </div>
+</div>
+
