--- a/src/app/components/rapports/rapports.component.html
+++ b/src/app/components/rapports/rapports.component.html
@@ -1,12 +1,12 @@
 <div class="col-lg-12">
     <section class="panel">
-        <div class="row">
+        <!-- <div class="row">
             <highcharts-chart
                 [Highcharts] = "chart"
                 [options] = "chartOptions"
                 style = "width: 100%; height: 400px; display: block;">
             </highcharts-chart>
-        </div>
+        </div> -->
         <div class="row">
                 <highcharts-chart
                     [Highcharts] = "chart2"
